--- a/Pages/ConstruccionDigital.razor
+++ b/Pages/ConstruccionDigital.razor
@@ -3,20 +3,54 @@
 
 <link rel="stylesheet" href="./css/custom-fonts.css" />
 
-
 @using teseractal_web.Components;
 @using teseractal_web.Models;
 @using System.ComponentModel.DataAnnotations
 
 <MudGrid Class="pa-8">
-    @for (int i = 0; i < 10; i++)
-    {
-        <MudItem xs="12" sm="6" md="3">
-            <Card1></Card1>
-        </MudItem>
-    }
+    <MudItem>
+        <Card2 Avatar="A" Title="Remodelación Estación Pta Atocha" Subtitle="ADIF" Image="/images/constru-digital/atocha1.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
 
-  
+    <MudItem>
+        <Card2 Avatar="P" Title="Nueva Estación Pasante Atocha-Chamartín" Subtitle="ADIF" Image="/images/constru-digital/pasante1.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
+
+    <MudItem>
+        <Card2 Avatar="P" Title="Nueva Estación Pasante Atocha-Chamartín" Subtitle="ADIF" Image="/images/constru-digital/pasante2.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
+
+    <MudItem>
+        <Card2 Avatar="P" Title="Nueva Estación Pasante Atocha-Chamartín" Subtitle="ADIF" Image="/images/constru-digital/pasante3.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
+
+    <MudItem>
+        <Card2 Avatar="R" Title="Estaciones Linea 1 Metro Rihad" Subtitle="TYPSA" Image="/images/constru-digital/rihad0.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
+
+    <MudItem>
+        <Card2 Avatar="R" Title="Estaciones Linea 1 Metro Rihad" Subtitle="TYPSA" Image="/images/constru-digital/rihad1.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
+
+    <MudItem>
+        <Card2 Avatar="R" Title="Estaciones Linea 1 Metro Rihad" Subtitle="TYPSA" Image="/images/constru-digital/rihad2.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
+
+    <MudItem>
+        <Card2 Avatar="R" Title="Estaciones Linea 1 Metro Rihad" Subtitle="TYPSA" Image="/images/constru-digital/rihad3.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
+
+    <MudItem>
+        <Card2 Avatar="R" Title="Estaciones Linea 1 Metro Rihad" Subtitle="TYPSA" Image="/images/constru-digital/rihad4.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
+
+    <MudItem>
+        <Card2 Avatar="R" Title="Estaciones Linea 1 Metro Rihad" Subtitle="TYPSA" Image="/images/constru-digital/rihad5.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
+
+    <MudItem>
+        <Card2 Avatar="R" Title="Estaciones Linea 1 Metro Rihad" Subtitle="TYPSA" Image="/images/constru-digital/rihad6.png" Description="Consultoría BIM, modelado, desarrollo de documentacion gráfica 2D y 3D, mediciones, etc."></Card2>
+    </MudItem>
 </MudGrid>
 
 @code {
