--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -11,12 +11,12 @@
 <PageTitle>teseractal</PageTitle>
 
 
-@* <MudImage Src="images/logoTeseractal.jpg" Elevation="25" Class="rounded-lg ma-4 foto" />
- *@
+
 
 <MudGrid>
     <MudItem Class="fullHeightContainer" xs="12">
         <div class="textsLogo">
+            <MudImage Class="logo" Src="images/logoTeseractal.png" Alt="Logo Teseractal" />
             <MudText Class="quicksandBold" Color="Color.Primary" Typo="Typo.h3">teseractal</MudText>
             <MudText Class="mt-4 quicksandBook" Color="Color.Primary" Typo="Typo.h5">Soluciones digitales para un mundo en transformación constante</MudText>
         </div>
@@ -26,7 +26,8 @@
         <div class="textsLogo">
             <MudText Class="quicksandBold" Color="Color.Primary" Typo="Typo.h3">construcción digital</MudText>
             <MudText Class="mt-4 quicksandBook" Color="Color.Primary" Typo="Typo.h5">Modelamos la realidad virtual antes de construirla</MudText>
-            <MudButton Variant="Variant.Filled" Color="Color.Secondary" Class="mt-4">VER PROYECTOS</MudButton>
+            <MudButton Href="https://teseractal.com/construcciondigital"
+                       Target="_blank" Variant="Variant.Filled" Color="Color.Secondary" Class="mt-4">VER PROYECTOS</MudButton>
         </div>
     </MudItem>
 
@@ -34,7 +35,8 @@
         <div class="textsLogo">
             <MudText Class="quicksandBold" Color="Color.Primary" Typo="Typo.h3">infografía arquitectónica</MudText>
             <MudText Class="mt-4 quicksandBook" Color="Color.Primary" Typo="Typo.h5">Damos forma a interiores y exteriores antes de poner el primer ladrillo</MudText>
-            <MudButton Variant="Variant.Filled" Color="Color.Secondary" Class="mt-4">VER PROYECTOS</MudButton>
+            <MudButto Href="https://teseractal.com/infografiaarquitectonica"
+                       Target="_blank"n Variant="Variant.Filled" Color="Color.Secondary" Class="mt-4">VER PROYECTOS</MudButto>
         </div>
     </MudItem>
 
@@ -42,7 +44,8 @@
         <div class="textsLogo">
             <MudText Class="quicksandBold" Color="Color.Primary" Typo="Typo.h3">infografía obra civil</MudText>
             <MudText Class="mt-4 quicksandBook" Color="Color.Primary" Typo="Typo.h5">Ayudamos a visualizar cómo serán las conexiones del futuro</MudText>
-            <MudButton Variant="Variant.Filled" Color="Color.Secondary" Class="mt-4">VER PROYECTOS</MudButton>
+            <MudButton Href="https://teseractal.com/infografiaobracivil"
+                       Target="_blank" Variant="Variant.Filled" Color="Color.Secondary" Class="mt-4">VER PROYECTOS</MudButton>
         </div>
     </MudItem>
 
@@ -50,7 +53,8 @@
         <div class="textsLogo">
             <MudText Class="quicksandBold" Color="Color.Primary" Typo="Typo.h3">automatización de procesos</MudText>
             <MudText Class="mt-4 quicksandBook" Color="Color.Primary" Typo="Typo.h5">Desarrollamos herramientas para ahorrar cientos de horas de tareas repetitivas</MudText>
-            <MudButton Variant="Variant.Filled" Color="Color.Secondary" Class="mt-4">VER PROYECTOS</MudButton>
+            <MudButton Href="https://teseractal.com/automatizacionprocesos"
+                       Target="_blank" Variant="Variant.Filled" Color="Color.Secondary" Class="mt-4">VER PROYECTOS</MudButton>
         </div>
     </MudItem>
 
@@ -68,6 +72,11 @@
     .textsLogo {
         text-align: center;
         margin: 4em;
+    }
+
+    .logo {
+        width: 15rem;
+        height: auto;
     }
 
 
