--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -19,7 +19,8 @@
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
-    <MudMainContent Class="overflow-x-hidden">
+   @*  <MudMainContent Class="overflow-x-hidden"> *@
+    <MudMainContent>
         @Body
     </MudMainContent>
 </MudLayout>
