Removed components from old template website

--- a/Pages/Contacto.razor
+++ b/Pages/Contacto.razor
@@ -21,7 +21,7 @@
                 <MudDivider />
                 <MudListItem href="tel:+34 691715617" data-rel="external" Text="M. Isabel Gallardo D (+34 691715617)" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary" />
                 <MudDivider />
-                <MudListItem Text="teseractal@hotmail.com" Icon="@Icons.Material.Filled.Email" IconColor="Color.Primary" />
+                <MudListItem Text="info@teseractal.com" Icon="@Icons.Material.Filled.Email" IconColor="Color.Primary" />
             </MudList>
         </div>
     </MudItem>
